[package]
name = "rust_lib_app_rhyme"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.7.1", features = ["chrono"] }
rayon = "1.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
chrono = { version = "0.4.39", features = ["serde"] }
base64 = "0.22.1"
rc4 = { git = "https://github.com/rsdump/rc4" }
aes = "0.8.4"
cbc = "0.1.2"
crypto = "0.5.1"
ecb = "0.1.2"
env_logger = "0.11.6"
generic-array = "1.2.0"
hex = "0.4.3"
log = "0.4.25"
md-5 = "0.10.6"
once_cell = "1.20.3"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "stream",
], default-features = false }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
rsa = { version = "0.9.7", features = ["hazmat"] }
sea-orm = { version = "1.1.4", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "serde_json",
    "with-json",
] }
sea-orm-migration = { version = "1.1.4", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], default-features = false }
sea-query = { version = "0.32.1" }
sea-query-binder = { version = "0.7.0", features = ["sqlx-any", "sqlx-sqlite"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
music_api = { git = "https://github.com/canxin121/music_api" }
anyhow = "1.0.95"

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
