[package]
name = "rust_lib_app_rhyme"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.8.0", default-features = false, features = [
    "chrono",
    "anyhow",
    "console_error_panic_hook",
    "dart-opaque",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
] }
futures = "0.3.31"
base64 = "0.22.1"
rc4 = { git = "https://github.com/rsdump/rc4" }
log = "0.4.26"
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "stream",
], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
music_api = { git = "https://github.com/canxin121/music_api" }
anyhow = "1.0.96"
flexi_logger = { version = "0.29.8", features = ["async"] }
zip = { version = "2.2.2", features = [
    "_deflate-any",
    "aes",
    "aes-crypto",
    "constant_time_eq",
    "deflate",
    "deflate-flate2",
    "deflate-zopfli",
    "deflate64",
    "hmac",
    "lzma",
    "pbkdf2",
    "rand",
    "sha1",
    "time",
    "xz",
    "zeroize",
    "zopfli",
    "zstd",
], default-features = false }
[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
